# tetris_the_fun_way

./: .clang-format  .clang-tidy  .clangd  .editorconfig  .gitignore  CMakeLists.txt  CONTRIBUTING.md  Makefile  README.md  a.out  meson.build  meson.options  prepare-windows-build.ps1  pyproject.toml  tox.ini  webassembly.cross
.github/workflows/: test.yaml
include/: constants.hpp  engine_object.hpp  game_object.hpp
include/game_objects/: game_object.hpp  game_object3d.hpp
include/graphics/: devices.hpp
include/math/: constants.hpp  utils.hpp  vector.hpp  vector2.hpp  vector3.hpp
include/math/matrices/: matrix.hpp  matrix2x2.hpp  matrix3x3.hpp  matrix4x4.hpp
include/math/vectors/: vector.hpp  vector2.hpp  vector3.hpp  vector4.hpp
include/parsers/: text_file.hpp
include/scenes/: scene.hpp  scene_manager.hpp
python_module/: module.cpp  vector2.cpp
sample_projects/tetris/: project.toml
sample_projects/tetris/assets/prefabs/: block.prefab.toml
sample_projects/tetris/assets/scenes/: main.scene.toml
sample_projects/tetris/scripts/: main.py
src/: CMakeLists.txt  devices.cpp  engine_object.cpp  game_object.cpp  main.cpp  object.cpp  tetris_the_fun_way.cpp  tetris_the_fun_way.hpp  validation_layering.cpp
src/game_objects/: game_object.cpp  game_object3d.cpp
src/graphics/: devices.cpp  graphics_pipeline.cpp  validation_layering.cpp
src/headers/: devices.hpp  graphics_pipeline.hpp  tetris_the_fun_way.hpp  tetris_the_fun_way.hpp.in  validation_layering.hpp
src/math/: vector.cpp  vector2.cpp  vector3.cpp
src/math/vectors/: vector.cpp  vector2.cpp  vector3.cpp
src/parsers/: text_file.cpp
tests/math/: test_utils.py  test_vectors.py
